2005-11-27  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* testsuite.at, tests/t_empty_env.at, tests/t_i18n_file.at,
	tests/t_netsync_sigpipe.at: Do not use shell if's == operator
	because it is not portable; use = instead.

2005-11-27  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* app_state.cc: No need to include headers for chdir() any more.
	This function was replaced by change_current_working_dir.
	* monotone.cc: Unconditionally include libintl.h as this file uses
	gettext functions.
	* configure.ac, rcs_import.cc: Check for strptime(3) and use the
	check results instead of assuming that only Windows lacks this
	function.
	* configure.ac, ui.cc: Check whether C++ streams support the
	sync_with_stdio method and use the check results instead of assuming
	that only Windows lacks this function.

	Addresses part of bug #12086.

2005-11-27  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* app_state.cc: Correctly detect when MT/options does not have a
	database property instead of printing the cryptic message "misuse:
	invalid path ''".

2005-11-27  Grahame Bowland  <grahame@angrygoats.net>

	* automate.cc (automate_stdio_read): remove check for EINTR
	that was breaking win32 build.

2005-11-27  Grahame Bowland  <grahame@angrygoats.net>

	* automate.cc (automate_certs,automate_keys): use non-exclusive 
	transaction guard
	* commands.cc (ls_certs,ls_keys,cat): use non-exclusive 
	transaction guard
	* database.cc (begin_transaction): used BEGIN DEFERRED (only attempt 
	exclusive lock once a write is attempted on DB) when not exclusive
	(transaction_guard::transaction_guard): new argument exclusive indicating 
	whether an immediate exclusive lock is requested, defaults to true
	* database.hh: update prototype for transaction_guard

2005-11-26  Nathaniel Smith  <njs@pobox.com>

	* UPGRADE: Add note about serve changing syntax.

2005-11-26  Nathaniel Smith  <njs@pobox.com>

	* UPGRADE: Update for 0.24.
	* configure.ac, win32/monotone.iss, monotone.spec: