@@ -1,8 +1,9 @@
 2005-11-27  Julio M. Merino Vidal  <jmmv@NetBSD.org>
 
 	* testsuite.at, tests/t_empty_env.at, tests/t_i18n_file.at,
-	tests/t_netsync_sigpipe.at: Do not use shell if's == operator
-	because it is not portable; use = instead.
+	tests/t_netsync_sigpipe.at, tests/t_update_1.at, tests/t_update_2.at:
+	Do not use test's == operator because it is not portable; use =
+	instead.
 
 2005-11-27  Julio M. Merino Vidal  <jmmv@NetBSD.org>
 
